--- a/UIPractice/UIPractice/Info.plist
+++ b/UIPractice/UIPractice/Info.plist
@@ -25,7 +25,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>UIPractice</string>
+					<string>Onboard</string>
 				</dict>
 			</array>
 		</dict>
